--- a/src/containers/ProjectContainer.css
+++ b/src/containers/ProjectContainer.css
@@ -2,7 +2,7 @@
 
     width:fit-content;
     
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.6);
     padding:5px 5px 10px 10px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
