--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -19,6 +19,10 @@ p{
     font-size: smaller;
 }
 
+li {
+    font-size: smaller;
+}
+
 .contact-details{
     list-style: none;
     /* background-color: rgba(255, 255, 255, 0.6); */
