--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -30,7 +30,14 @@
 
 }
 
-
+a.link{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    gap: 8px;
+    
+}
 
 
 
@@ -71,10 +78,13 @@ li {
 
 .contact-details{
     list-style: none;
-    /* background-color: rgba(255, 255, 255, 0.6); */
     display: flex;
     flex-direction: row;
     align-content: center;
+    cursor: pointer;
+    width: fit-content;
+    text-align: center;
+    gap: 8px;
 }
 
 .contact-details .icon {
