--- a/src/components/ProjectNav.css
+++ b/src/components/ProjectNav.css
@@ -11,7 +11,8 @@ h2{
     display: flex;
     flex-direction: row;
     list-style:none;
-    margin-block-start: 0em!important;
+    margin-top: 8px;
+    /* margin-block-start: 0em!important; */
     margin-block-end: 0em!important;
     margin-inline-start: 0px!important;
     margin-inline-end: 0px!important;
@@ -31,35 +32,38 @@ h2{
     color:black!important; 
     background-color: rgba(255, 255, 255, 0.6)!important;  
     opacity:1!important;
+        border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .active:hover {
     color:coral!important; 
     background-color: rgba(255, 255, 255, 0.6)!important;  
     opacity:1!important;
- 
+        border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    
 
 }
 .nav a{
-    padding:3px 3px 0 3px;
+    padding:8px 8px 0 8px;
     font-size:xx-large;
-    color: rgb(58, 152, 58);
+    color: rgb(60 88 171);
     opacity:0.5;
-
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-
     text-decoration: none;
-
+    
 }
 
 .nav a:hover {
-    color: rgb(190, 45, 227);
+    color: rgb(227, 63, 45);
+}
+
+.nav li:last-of-type a {
+  border-top-right-radius: 5px;
 }
 
 .selected-title{
-    color: rgb(58, 152, 58);
-
+    color: rgb(227, 63, 45);
     opacity: 0.6;
 }
 
