--- a/src/containers/ProjectContainer.css
+++ b/src/containers/ProjectContainer.css
@@ -1,7 +1,5 @@
 .project-info {
-
     width:fit-content;
-    
     background-color: rgba(255, 255, 255, 0.6);
     padding:5px 5px 10px 10px;
     border-bottom-left-radius: 5px;
@@ -13,25 +11,9 @@
     margin-inline-end: 0px;
 }
 
-.project-face {
-    width: 230px;
-    height: 299px;
+@media (max-width: 768px) {
+    div.project-info{
+        max-width: 380px;
+    }
 }
 
-h2{
-    padding:5px;
-    margin:none;
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-
-h3{
-    padding:5px;
-    margin:none;
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
